# mephOS

./: .gitmodules  CMakeLists.txt
kernel/impl/: entry.s  kernel.c  linker.ld
kstdlib/headers/: stdlib.h  string.h
kstdlib/impl/: string.c
misc/run-cfg/: Kernel-1.run.xml  Kernel.run.xml
stdlib/headers/: stdlib.h  string.h
